@@ -4,6 +4,7 @@ Release 0.5.8
 
 * fix a bug in the preview gui to write threshold
 * fix a bug for some paths in Windows (thanks to Albert Miklos)
+* add a wrapper for NeuraLynx (.ncs) file format
 
 =============
 Release 0.5.7
